Updated submodule path.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "jarvican"]
 	path = jarvican
-	url = git@github.com:jarv/jarvican
+	url = https://gitlab.com/jarv/jarvican
 [submodule "pelican-plugins"]
 	path = pelican-plugins
 	url = https://github.com/getpelican/pelican-plugins
