--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,10 @@ title = "jarv.org"
 theme = "kiera"
 pygmentsCodeFences = true
 copyright = "Copyright 2007-{year}"
-description = "Hugo Theme for creative and technical writing"
+summaryLength = 5
+
+[params]
+  description = "random thoughts"
 
 [author]
   name = "jarv"
