--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -21,8 +21,6 @@ pygmentsCodeFences = true
     lineNoStart = 1
     lineNos = false
     lineNumbersInTable = true
-    noClasses = true
+    noClasses = false
     noHl = false
-    # https://xyproto.github.io/splash/docs/longer/all.html
-    style = 'github'
     tabWidth = 4
