--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
 languageCode = "en-us"
-title = "John Jarvis"
+title = "jarv"
 theme = "one-post-a-year"
 baseURL = 'https://jarv.org/'
 description = ""
