--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,22 +5,14 @@ baseURL = 'https://jarv.org/'
 description = ""
 
 pygmentsCodeFences = true
-
 [markup.goldmark.renderer]
   unsafe = "true"
-
 [markup]
   defaultMarkdownHandler = 'goldmark'
   [markup.highlight]
-    anchorLineNos = false
-    codeFences = true
-    guessSyntax = true
-    hl_Lines = ''
-    hl_inline = false
-    lineAnchors = ''
-    lineNoStart = 1
-    lineNos = false
-    lineNumbersInTable = true
     noClasses = false
-    noHl = false
-    tabWidth = 4
+    # https://xyproto.github.io/splash/docs/longer/all.html
+    # Classes included in this theme for the following two styles:
+      # style = 'github'
+      # style = 'solarized-dark'
+    tabWidth = 2
