--- a/config/prd/hugo.toml
+++ b/config/prd/hugo.toml
@@ -1,3 +1,3 @@
 publishDir = "/srv/jarv-org/www"
 [params]
-  dutUrl = "https://diduthink.jarv.org/view/DEMO"
+  dutUrl = "https://surveymoji.jarv.org/view/DEMO"
