--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -6,8 +6,8 @@ pygmentsCodeFences = true
 
 [params]
   description = "random thoughts and posts on tech"
-  dutUrl = "http://localhost:8760/view/DEMO"
-
+  smDemo = "http://localhost:8760/view/DEMO"
+  smEmbed = "http://localhost:8760/embed/DEMO?question=false"
 [markup]
   defaultMarkdownHandler = 'goldmark'
   [markup.highlight]
