--- a/config/prd/hugo.toml
+++ b/config/prd/hugo.toml
@@ -1,3 +1,4 @@
 publishDir = "/srv/jarv-org/www"
 [params]
-  dutUrl = "https://surveymoji.jarv.org/view/DEMO"
+  smDemo = "https://surveymoji.com/view/DEMO"
+  smEmbed = "https://surveymoji.com/embed/DEMO?question=false"
